<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="48dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_contact_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                tools:text="Example text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_contact_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_display_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_contact_display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkbox_is_junior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/junior" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@android:layout/simple_list_item_1" />

        <CheckBox
            android:id="@+id/checkbox_immediate_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_immediately" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/available_from_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_start_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_preview_message"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preview_message" />

    </LinearLayout>

</ScrollView>